rns-lang/tests/snapshots/lexer-directives-dot_space.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    . whaaat?
.end
----- STDOUT -----

----- STDERR -----
Error: unexpected character
   ╭─[ test_data/integration/lexer/directives/dot_space.ja:2:6 ]
   │
 2 │     . whaaat?
   │      ┬  
   │      ╰── found ' ' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code
───╯
